crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__declarations-6.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(r#\"\n            let foo = () => {\n                let mut msg: string = \"hello, world\";\n                msg\n            };\n        \"#)"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 1,
                        column: 12,
                    },
                    end: Position {
                        line: 4,
                        column: 14,
                    },
                },
                span: 13..119,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 1,
                                    column: 16,
                                },
                                end: Position {
                                    line: 1,
                                    column: 19,
                                },
                            },
                            span: 17..20,
                            kind: Ident(
                                BindingIdent {
                                    name: "foo",
                                    mutable: false,
                                    span: 17..20,
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 1,
                                            column: 16,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 19,
                                        },
                                    },
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 1,
                                        column: 22,
                                    },
                                    end: Position {
                                        line: 4,
                                        column: 13,
                                    },
                                },
                                span: 23..118,
                                kind: Lambda(
                                    Lambda {
                                        params: [],
                                        body: Block(
                                            Block {
                                                span: 29..118,
                                                stmts: [
                                                    Statement {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 2,
                                                                column: 16,
                                                            },
                                                            end: Position {
                                                                line: 2,
                                                                column: 53,
                                                            },
                                                        },
                                                        span: 47..84,
                                                        kind: VarDecl(
                                                            VarDecl {
                                                                pattern: Pattern {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 2,
                                                                            column: 20,
                                                                        },
                                                                        end: Position {
                                                                            line: 2,
                                                                            column: 27,
                                                                        },
                                                                    },
                                                                    span: 51..58,
                                                                    kind: Ident(
                                                                        BindingIdent {
                                                                            name: "msg",
                                                                            mutable: true,
                                                                            span: 51..58,
                                                                            loc: SourceLocation {
                                                                                start: Position {
                                                                                    line: 2,
                                                                                    column: 20,
                                                                                },
                                                                                end: Position {
                                                                                    line: 2,
                                                                                    column: 27,
                                                                                },
                                                                            },
                                                                        },
                                                                    ),
                                                                    inferred_type: None,
                                                                },
                                                                type_ann: Some(
                                                                    TypeAnn {
                                                                        kind: Keyword(
                                                                            KeywordType {
                                                                                keyword: String,
                                                                            },
                                                                        ),
                                                                        loc: SourceLocation {
                                                                            start: Position {
                                                                                line: 2,
                                                                                column: 29,
                                                                            },
                                                                            end: Position {
                                                                                line: 2,
                                                                                column: 35,
                                                                            },
                                                                        },
                                                                        span: 60..66,
                                                                        inferred_type: None,
                                                                    },
                                                                ),
                                                                init: Some(
                                                                    Expr {
                                                                        loc: SourceLocation {
                                                                            start: Position {
                                                                                line: 2,
                                                                                column: 38,
                                                                            },
                                                                            end: Position {
                                                                                line: 2,
                                                                                column: 52,
                                                                            },
                                                                        },
                                                                        span: 69..83,
                                                                        kind: Lit(
                                                                            Str(
                                                                                Str {
                                                                                    loc: SourceLocation {
                                                                                        start: Position {
                                                                                            line: 2,
                                                                                            column: 38,
                                                                                        },
                                                                                        end: Position {
                                                                                            line: 2,
                                                                                            column: 52,
                                                                                        },
                                                                                    },
                                                                                    span: 69..83,
                                                                                    value: "hello, world",
                                                                                },
                                                                            ),
                                                                        ),
                                                                        inferred_type: None,
                                                                    },
                                                                ),
                                                                declare: false,
                                                            },
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                    Statement {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 3,
                                                                column: 16,
                                                            },
                                                            end: Position {
                                                                line: 3,
                                                                column: 19,
                                                            },
                                                        },
                                                        span: 101..104,
                                                        kind: ExprStmt(
                                                            Expr {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 3,
                                                                        column: 16,
                                                                    },
                                                                    end: Position {
                                                                        line: 3,
                                                                        column: 19,
                                                                    },
                                                                },
                                                                span: 101..104,
                                                                kind: Ident(
                                                                    Ident {
                                                                        loc: SourceLocation {
                                                                            start: Position {
                                                                                line: 3,
                                                                                column: 16,
                                                                            },
                                                                            end: Position {
                                                                                line: 3,
                                                                                column: 19,
                                                                            },
                                                                        },
                                                                        span: 101..104,
                                                                        name: "msg",
                                                                    },
                                                                ),
                                                                inferred_type: None,
                                                            },
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                ],
                                            },
                                        ),
                                        is_async: false,
                                        return_type: None,
                                        type_params: None,
                                    },
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
