crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__decls-4.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"declare let foo: Foo<string>;\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 8,
                    },
                    end: Position {
                        line: 0,
                        column: 29,
                    },
                },
                span: 8..29,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 12,
                                },
                                end: Position {
                                    line: 0,
                                    column: 15,
                                },
                            },
                            span: 12..15,
                            kind: Ident(
                                BindingIdent {
                                    name: "foo",
                                    mutable: false,
                                    span: 12..15,
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 12,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 15,
                                        },
                                    },
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: Some(
                            TypeAnn {
                                kind: TypeRef(
                                    TypeRef {
                                        name: "Foo",
                                        type_args: Some(
                                            [
                                                TypeAnn {
                                                    kind: Keyword(
                                                        KeywordType {
                                                            keyword: String,
                                                        },
                                                    ),
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 21,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 27,
                                                        },
                                                    },
                                                    span: 21..27,
                                                    inferred_type: None,
                                                },
                                            ],
                                        ),
                                    },
                                ),
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 17,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 28,
                                    },
                                },
                                span: 17..28,
                                inferred_type: None,
                            },
                        ),
                        init: None,
                        declare: true,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
